I changed the heading to "Welcome to my portfolio".

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 <body>
 
-<h1> Hello World - here is where you see rockets are launch</h1>
+<h1> Welcome to my portfolio </h1>
+
+
 
 </body>
 </html>
