--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>portfolio</title>
   <link rel="stylesheet" href="" />
-  <script src=""> 
+  <script src=".\webindex.js"> 
    /*Albert X
     06-06-2022
     New Assignment 
@@ -17,6 +17,14 @@
 
 <h1> Welcome to my portfolio </h1>
 
+<P>
+
+
+    <br>
+</P>
+<h2>
+
+</h2>
 
 
 </body>
