--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>portfolio</title>
-  <link rel="stylesheet" href="" />
-  <script src=".\webindex.js"> 
-   /*Albert X
-    06-06-2022
-    New Assignment 
-    */</script>
+  <title>Event Driven Prpgramming</title>
+  <link rel="stylesheet" href="./operatorLogin.css" />
+  <script src="./operatorLogin.js"></script>
 </head>
+
 <body>
-<img src="./spaceLogo.jpg" alt="Logo">
-<h1> Welcome to my portfolio </h1>
-<p>What is Lorem Ipsum?
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-
-Why do we use it?
-It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-
-</p>
-<a href="./boards-page.html">Boards Page</a>
-<br/>
-<br/>
-<a href="./page2.html">Page 2</a>
+  <div class="container">
+    <img src="./spaceLogo.jpg" alt="">
+    <h2 class="white">UAT Space Program</h2>
+  </div>
+  <form>
+    <br>
+    FullName: <input type="text" id="fullName">
+    <br>
+    <br>
+    Badge number: <input type="text" id="badgeNumber">
+    <br>
+    <br>
+    <p id="errorMessage"></p>
+    <a href="./tablePage/index.html">Go to Table</a>
+  </form>
 </body>
+
 </html>
